catkin_ws/logs/fireflycontrol/build.make.004.log.stderr
In file included from /opt/ros/kinetic/include/ros/ros.h:40:0,
                 from /home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:1:
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp: In function ‘void Callback(const ConstPtr&)’:
/opt/ros/kinetic/include/ros/console.h:346:176: warning: format ‘%f’ expects argument of type ‘double’, but argument 8 has type ‘const _position_type {aka const geometry_msgs::Point_<std::allocator<void> >}’ [-Wformat=]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/kinetic/include/ros/console.h:349:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(0, __VA_ARGS__)
     ^
/opt/ros/kinetic/include/ros/console.h:379:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^
/opt/ros/kinetic/include/ros/console.h:561:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^
/opt/ros/kinetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:10:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("I heard: [%f]", msg->position);
   ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp: At global scope:
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:18:1: error: expected ‘)’ before ‘{’ token
 {
 ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp: In function ‘void detect(const int (*)(int, char**))’:
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:19:13: error: ‘argc’ was not declared in this scope
   ros::init(argc, argv, "listener");
             ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:19:19: error: ‘argv’ was not declared in this scope
   ros::init(argc, argv, "listener");
                   ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:21:51: error: ‘chatterCallback’ was not declared in this scope
   ros::Subscriber sub = n.subscribe("scan", 1000, chatterCallback);
                                                   ^
/home/chris/catkin_ws/src/fireflycontrol/src/control.cpp:24:10: error: return-statement with a value, in function returning 'void' [-fpermissive]
   return 0;
          ^
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
make: *** [all] Error 2
